editted that scrollbar currently doesn't work because it was causing bugs. will change later

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 
-@plugin 'tailwind-scrollbar';
+@plugin 'tailwind-scrollbar' {
+  nocompatible: true;
+}
 
 @custom-variant dark (&:where(.dark, .dark *));
 
